fixed text-align on landing-header

--- a/tomdougiamas/static/css/tomdougiamas.scss
+++ b/tomdougiamas/static/css/tomdougiamas.scss
@@ -52,6 +52,7 @@ code {
   justify-content: center;
   align-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .landing-header h1 {
